fix(style): rerank text overlap

--- a/src/pages/playground/style/rerank.less
+++ b/src/pages/playground/style/rerank.less
@@ -16,6 +16,7 @@
         top: 0;
         z-index: 100;
         align-items: center;
+        background-color: var(--ant-color-bg-container);
       }
     }
 
